# BennuGD_libretro

./: .gitignore  CMakeLists.txt  Makefile  Makefile.vita  build-wasm.sh  dockerfile-wasm
.devcontainer/switch/: Dockerfile  build-nro.sh
.devcontainer/wasm/: devcontainer.json  dockerfile
.github/workflows/: wasm.yml
_codeql_build_dir/: CPackConfig.cmake  CPackSourceConfig.cmake  Makefile
_codeql_build_dir/core/: Makefile
_codeql_build_dir/core/bgdi/: Makefile
_codeql_build_dir/libretro/: Makefile
_codeql_build_dir/libretro/sdl-libretro/: Makefile
_codeql_build_dir/libretro/sdl_mixer-libretro/: Makefile
_codeql_build_dir/modules/: Makefile
_codeql_build_dir/modules/libbgload/: Makefile
_codeql_build_dir/modules/libblit/: Makefile
_codeql_build_dir/modules/libdraw/: Makefile
_codeql_build_dir/modules/libfont/: Makefile
_codeql_build_dir/modules/libgrbase/: Makefile
_codeql_build_dir/modules/libjoy/: Makefile
_codeql_build_dir/modules/libkey/: Makefile
_codeql_build_dir/modules/libmouse/: Makefile
_codeql_build_dir/modules/librender/: Makefile
_codeql_build_dir/modules/libscroll/: Makefile
_codeql_build_dir/modules/libsdlhandler/: Makefile
_codeql_build_dir/modules/libtext/: Makefile
_codeql_build_dir/modules/libvideo/: Makefile
_codeql_build_dir/modules/libwm/: Makefile
_codeql_build_dir/modules/mod_blendop/: Makefile
_codeql_build_dir/modules/mod_cd/: Makefile
_codeql_build_dir/modules/mod_crypt/: Makefile
_codeql_build_dir/modules/mod_debug/: Makefile
_codeql_build_dir/modules/mod_dir/: Makefile
_codeql_build_dir/modules/mod_draw/: Makefile
core/: CMakeLists.txt
core/bgdc/: CMakeLists.txt
core/bgdc/src/: CMakeLists.txt  c_code.c  c_main.c  strings.c  token.c
core/bgdi/: CMakeLists.txt
core/common/: bgd_version.c
libretro/: CMakeLists.txt  libretro.c
libretro/sdl-libretro/: CMakeLists.txt
libretro/sdl_mixer-libretro/: CMakeLists.txt
modules/: CMakeLists.txt
modules/mod_sys/: mod_sys.c
(+31 files in other folders)
